# system-audio

./: .canon.yaml  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.py  darwin_tcc.sh  meta.json  run.sh
.github/workflows/: build-publish.yml  build.yml  checks.yml  docker-publish.yml  publish.yml  test.yml
portaudio/lib/.libs/: libportaudio.2.dylib  libportaudio.la  libportaudio.lai
src/: audio_buffer.cpp  audio_buffer.hpp  audio_codec.cpp  audio_codec.hpp  audio_stream.cpp  audio_stream.hpp  audio_utils.hpp  device_id.cpp  device_id.hpp  discovery.cpp  discovery.hpp  file_utils.hpp  main.cpp  microphone.cpp  microphone.hpp  module.cpp  module.hpp  mp3_decoder.cpp  mp3_decoder.hpp  mp3_encoder.cpp  mp3_encoder.hpp  portaudio.hpp  resample.hpp  routing_filter.cpp  routing_filter.hpp  speaker.cpp  speaker.hpp  volume.hpp  watchdog.hpp
test/: CMakeLists.txt  audio_buffer_test.cpp  audio_codec_test.cpp  audio_stream_test.cpp  audio_utils_test.cpp  discovery_test.cpp  file_utils_test.cpp  microphone_test.cpp  mp3_decoder_test.cpp  mp3_encoder_test.cpp  resample_test.cpp  routing_filter_test.cpp  speaker_test.cpp  test_utils.hpp  watchdog_test.cpp
